k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nimbusflow-ingress
  namespace: nimbusflow

spec:
  ingressClassName: nginx

  rules:

    # Main Application
    - host: nimbusflow.local

      http:
        paths:

          # Frontend
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 80

          # API Gateway
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: api-gateway
                port:
                  number: 8080

          - path: /auth
            pathType: Prefix

            backend:
              service:
                name: api-gateway
                port:
                  number: 8080

    # Eureka Dashboard
    - host: eureka.nimbusflow.local

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: discovery-server
                port:
                  number: 8761
